1st: Added new model Category and updated database structure 2nd: Connected to Azure databse 3rd: Update web services 4th: Added home page and workedon UI part

--- a/KnowledgeApp/KnowledgeApp/AppShell.xaml
+++ b/KnowledgeApp/KnowledgeApp/AppShell.xaml
@@ -80,8 +80,8 @@
     -->
 
 
-    <FlyoutItem Title="View Data">
-        <ShellContent Route="DataListView" ContentTemplate="{DataTemplate views:DataListView}"></ShellContent>
+    <FlyoutItem Title="Categories">
+        <ShellContent Route="HomeView" ContentTemplate="{DataTemplate views:HomeView}"></ShellContent>
     </FlyoutItem>
 
 
