Navigation from Home page to list view working fine.

--- a/KnowledgeApp/KnowledgeApp/AppShell.xaml
+++ b/KnowledgeApp/KnowledgeApp/AppShell.xaml
@@ -81,7 +81,7 @@
 
 
     <FlyoutItem Title="Categories">
-        <ShellContent Route="DataListView" ContentTemplate="{DataTemplate views:DataListView}"></ShellContent>
+        <ShellContent Route="HomeView" ContentTemplate="{DataTemplate views:HomeView}"></ShellContent>
     </FlyoutItem>
 
 
